# my_gpt2

./: LICENSE  Makefile  README.md  bench.py  main.py  pyproject.toml  requirements.txt
dockerfiles/: predict.dockerfile  predict_model.dockerfile  train_model.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
gpt2/: __init__.py  inference.py  train.py
